# who-locks

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  SECURITY.md  build.rs
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  main.rs  model.rs  res.rs  scan.rs  sha256_impl.rs
src/detector/: linux.rs  macos.rs  mod.rs  windows.rs
src/gui/: export.rs  i18n.rs  mod.rs  panels.rs  state.rs  worker.rs
src/killer/: mod.rs  unix.rs  windows.rs
tests/: cli_integration.rs
