[package]
name = "who-locks"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
description = "Cross-platform file lock detector with GUI - find out which processes are locking your files"
license = "MIT"
repository = "https://github.com/BBYYBB/who-locks"
homepage = "https://github.com/BBYYBB/who-locks"
keywords = ["file-lock", "process", "handle", "lsof", "gui"]
categories = ["gui", "os", "filesystem"]
readme = "README.md"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rfd = "0.17"
open = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# 核心
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_RestartManager",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = true
codegen-units = 1
